# gemini-cli-usage-analyzer

./: AGENTS.md  README.md  pyproject.toml  pytest.ini
gemini_cli_usage_analyzer/: __init__.py  __main__.py  calculate_token_usage.py  convert_logs.py  price_spec.py  simplify_logs.py
tests/: test_calculate_token_usage.py  test_convert_logs.py  test_price_spec.py  test_simplify_logs.py
