[project]
name = "gemini-cli-token-counts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.11.4",
    "orjsonl>=1.0.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
]

[tool.pyright]
reportCallInDefaultInitializer = false
