[project]
name = "gemini-cli-usage-analyzer"
version = "0.2.0"
description = "A simple tool to analyze Gemini CLI token usage using its OpenTelemetry logs."
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.11.4",
    "orjsonl>=1.0.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.1",
    "pytest-env>=1.2.0",
]

[tool.pyright]
reportCallInDefaultInitializer = false

[project.scripts]
gemini-cli-usage-analyzer = "gemini_cli_usage_analyzer.__main__:main"
